[tool.poetry]
name = "miose-toolkit"
version = "0.0.27"
description = ""
authors = ["KroMiose <li_xiangff@163.com>"]
readme = "README.md"
packages = [{ include = "scripts" }]

[tool.poetry.dependencies]
python = ">=3.8, <3.12"
toml = "^0.10.2"
miose-toolkit-common = { path = "packages/common/", develop = true }
miose-toolkit-logger = { path = "packages/logger/", develop = true }
miose-toolkit-db = { path = "packages/db/", develop = true }
miose-toolkit-llm = { path = "packages/llm/", extras = ["all"], develop = true  }

[tool.poetry.scripts]
install = "scripts.run_install:main"
clean = "scripts.run_clean:main"
build = "scripts.run_build:main"
publish = "scripts.run_publish:main"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-cov = "^5.0.0"
pytest-html = "^4.1.1"
pytest-asyncio = "^0.23.7"

[tool.pytest.ini_options]
pytest_plugins = ["cov"]
addopts = "--cov=src --cov-report=html:.pytest/coverage_report --cov-report=term-missing -v --html=.pytest/report.html"
testpaths = ["tests"]
pythonpath = ["."]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
extend-exclude = []
ignore = [
  "E501",
  "E722",
  "F401",
  "F403",
  "B008",
  "B905",
  "PYI019",
  "TID252",
  "TRY002",
  "TRY003",
  "RUF001",
  "RUF002",
  "RUF003",
  "RUF006",
  "RUF100",
  "PGH003",
  "N801",
  "A003",
]
select = [
  "F",
  "E",
  "I",
  "B",
  "A",
  "COM",
  "C4",
  "ISC",
  "PIE",
  "PYI",
  "Q",
  "RSE",
  "RET",
  "SLF",
  "SIM",
  "TID",
  "ARG",
  "PTH",
  "PGH",
  "TRY",
  "RUF",
]
